# groktok

./: .gitignore  README.md  groktok  pyproject.toml
.github/workflows/: release.yml
.grok/skills/groktok/: SKILL.md
skills/groktok/: SKILL.md
src/groktok/: __init__.py  auth.py  billing.py  calibration.py  cli.py  config.py  display.py  economics.py  estimate.py  interactive.py  local_tokens.py  pricing.py
