[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "groktok"
version = "0.2.3"
description = "CLI for Grok subscription weekly usage, local-first pool tracking, and SuperGrok economics"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "groktok" }]
keywords = ["grok", "xai", "usage", "tokens", "cli", "billing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]
dependencies = []

[project.scripts]
groktok = "groktok.cli:main"

[project.urls]
Homepage = "https://github.com/danecwalker/groktok"

[tool.setuptools.packages.find]
where = ["src"]
